fix: remove margin and gap from container-box in App.scss

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -51,8 +51,6 @@ body {
         align-items: center;
         flex-direction: column;
         height: 100vh;
-        margin: 10px;
-        gap: 1rem;
 
         .container-box_video-feed {
             width: 59%;
